added feedback functionality